tests/fetch/fetch.exp
Error: fetch.js:12
 12: const b: Promise<string> = fetch(myRequest); // incorrect
                                ^^^^^^^^^^^^^^^^ type application of identifier `Promise`. Has some incompatible type argument with
 12: const b: Promise<string> = fetch(myRequest); // incorrect
              ^^^^^^^^^^^^^^^ type application of identifier `Promise`
  Type argument `R` is incompatible:
    993: declare function fetch(input: RequestInfo, init?: RequestOptions): Promise<Response>;
                                                                                    ^^^^^^^^ Response. This type is incompatible with. See lib: <BUILTINS>/bom.js:993
     12: const b: Promise<string> = fetch(myRequest); // incorrect
                          ^^^^^^ string

Error: fetch.js:25
 25: const d: Promise<Blob> = fetch('image.png'); // incorrect
                              ^^^^^^^^^^^^^^^^^^ type application of identifier `Promise`. Has some incompatible type argument with
 25: const d: Promise<Blob> = fetch('image.png'); // incorrect
              ^^^^^^^^^^^^^ type application of identifier `Promise`
  Type argument `R` is incompatible:
     25: const d: Promise<Blob> = fetch('image.png'); // incorrect
                          ^^^^ Blob. This type is incompatible with
    993: declare function fetch(input: RequestInfo, init?: RequestOptions): Promise<Response>;
                                                                                    ^^^^^^^^ Response. See lib: <BUILTINS>/bom.js:993

Error: headers.js:3
  3: const a = new Headers("'Content-Type': 'image/jpeg'"); // not correct
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with the expected param type of
877:     constructor(init?: HeadersInit): void;
                            ^^^^^^^^^^^ union: Headers | object type. See lib: <BUILTINS>/bom.js:877
  Member 1:
  870: type HeadersInit = Headers | {[key: string]: string};
                          ^^^^^^^ Headers. See lib: <BUILTINS>/bom.js:870
  Error:
    3: const a = new Headers("'Content-Type': 'image/jpeg'"); // not correct
                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
  870: type HeadersInit = Headers | {[key: string]: string};
                          ^^^^^^^ Headers. See lib: <BUILTINS>/bom.js:870
  Member 2:
  870: type HeadersInit = Headers | {[key: string]: string};
                                    ^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:870
  Error:
    3: const a = new Headers("'Content-Type': 'image/jpeg'"); // not correct
                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
  870: type HeadersInit = Headers | {[key: string]: string};
                                    ^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:870

Error: headers.js:4
  4: const b = new Headers(['Content-Type', 'image/jpeg']); // not correct
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ array literal. This type is incompatible with the expected param type of
877:     constructor(init?: HeadersInit): void;
                            ^^^^^^^^^^^ union: Headers | object type. See lib: <BUILTINS>/bom.js:877
  Member 1:
  870: type HeadersInit = Headers | {[key: string]: string};
                          ^^^^^^^ Headers. See lib: <BUILTINS>/bom.js:870
  Error:
    4: const b = new Headers(['Content-Type', 'image/jpeg']); // not correct
                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ array literal. This type is incompatible with
  870: type HeadersInit = Headers | {[key: string]: string};
                          ^^^^^^^ Headers. See lib: <BUILTINS>/bom.js:870
  Member 2:
  870: type HeadersInit = Headers | {[key: string]: string};
                                    ^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:870
  Error:
    4: const b = new Headers(['Content-Type', 'image/jpeg']); // not correct
                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ array literal. This type is incompatible with
  870: type HeadersInit = Headers | {[key: string]: string};
                                    ^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:870

Error: headers.js:9
  9: e.append('Content-Type'); // not correct
     ^^^^^^^^^^^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
878:     append(name: string, value: string): void;
                                     ^^^^^^ string. See lib: <BUILTINS>/bom.js:878

Error: headers.js:10
 10: e.append({'Content-Type': 'image/jpeg'}); // not correct
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
878:     append(name: string, value: string): void;
                                     ^^^^^^ string. See lib: <BUILTINS>/bom.js:878

Error: headers.js:10
 10: e.append({'Content-Type': 'image/jpeg'}); // not correct
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with the expected param type of
878:     append(name: string, value: string): void;
                      ^^^^^^ string. See lib: <BUILTINS>/bom.js:878

Error: headers.js:12
 12: e.set('Content-Type'); // not correct
     ^^^^^^^^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
885:     set(name: string, value: string): void;
                                  ^^^^^^ string. See lib: <BUILTINS>/bom.js:885

Error: headers.js:13
 13: e.set({'Content-Type': 'image/jpeg'}); // not correct
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
885:     set(name: string, value: string): void;
                                  ^^^^^^ string. See lib: <BUILTINS>/bom.js:885

Error: headers.js:13
 13: e.set({'Content-Type': 'image/jpeg'}); // not correct
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with the expected param type of
885:     set(name: string, value: string): void;
                   ^^^^^^ string. See lib: <BUILTINS>/bom.js:885

Error: headers.js:15
 15: const f: Headers = e.append('Content-Type', 'image/jpeg'); // not correct
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ undefined. This type is incompatible with
 15: const f: Headers = e.append('Content-Type', 'image/jpeg'); // not correct
              ^^^^^^^ Headers

Error: headers.js:18
 18: const h: number = e.get('Content-Type'); // not correct
                       ^^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
 18: const h: number = e.get('Content-Type'); // not correct
              ^^^^^^ number

Error: headers.js:28
 28: e.getAll('content-type'); // incorrect
       ^^^^^^ property `getAll`. Property not found in
 28: e.getAll('content-type'); // incorrect
     ^ Headers

Error: request.js:2
  2: const a: Request = new Request(); // incorrect
                        ^^^^^^^^^^^^^ constructor call
  2: const a: Request = new Request(); // incorrect
                        ^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
968:     constructor(input: RequestInfo, init?: RequestOptions): void;
                            ^^^^^^^^^^^ union: Request | URL | string. See lib: <BUILTINS>/bom.js:968
  Member 1:
  917: type RequestInfo = Request | URL | string;
                          ^^^^^^^ Request. See lib: <BUILTINS>/bom.js:917
  Error:
    2: const a: Request = new Request(); // incorrect
                          ^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
  917: type RequestInfo = Request | URL | string;
                          ^^^^^^^ Request. See lib: <BUILTINS>/bom.js:917
  Member 2:
  917: type RequestInfo = Request | URL | string;
                                    ^^^ URL. See lib: <BUILTINS>/bom.js:917
  Error:
    2: const a: Request = new Request(); // incorrect
                          ^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
  917: type RequestInfo = Request | URL | string;
                                    ^^^ URL. See lib: <BUILTINS>/bom.js:917
  Member 3:
  917: type RequestInfo = Request | URL | string;
                                          ^^^^^^ string. See lib: <BUILTINS>/bom.js:917
  Error:
    2: const a: Request = new Request(); // incorrect
                          ^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
  917: type RequestInfo = Request | URL | string;
                                          ^^^^^^ string. See lib: <BUILTINS>/bom.js:917

Error: request.js:6
  6: const e: Request = new Request(b, c); // incorrect
                                       ^ Request. This type is incompatible with the expected param type of
968:     constructor(input: RequestInfo, init?: RequestOptions): void;
                                                ^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:968
  Property `cache` is incompatible:
    922:     cache?: CacheType;
                     ^^^^^^^^^ undefined. This type is incompatible with. See lib: <BUILTINS>/bom.js:922
    973:     cache: CacheType;
                    ^^^^^^^^^ string enum. See lib: <BUILTINS>/bom.js:973

Error: request.js:6
  6: const e: Request = new Request(b, c); // incorrect
                                       ^ Request. This type is incompatible with the expected param type of
968:     constructor(input: RequestInfo, init?: RequestOptions): void;
                                                ^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:968
  Property `credentials` is incompatible:
    923:     credentials?: CredentialsType;
                           ^^^^^^^^^^^^^^^ undefined. This type is incompatible with. See lib: <BUILTINS>/bom.js:923
    974:     credentials: CredentialsType;
                          ^^^^^^^^^^^^^^^ string enum. See lib: <BUILTINS>/bom.js:974

Error: request.js:6
  6: const e: Request = new Request(b, c); // incorrect
                                       ^ Request. This type is incompatible with the expected param type of
968:     constructor(input: RequestInfo, init?: RequestOptions): void;
                                                ^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:968
  Property `headers` is incompatible:
    924:     headers?: HeadersInit;
                       ^^^^^^^^^^^ object type. This type is incompatible with. See lib: <BUILTINS>/bom.js:924
    975:     headers: Headers;
                      ^^^^^^^ Headers. See lib: <BUILTINS>/bom.js:975

Error: request.js:6
  6: const e: Request = new Request(b, c); // incorrect
                                       ^ Request. This type is incompatible with the expected param type of
968:     constructor(input: RequestInfo, init?: RequestOptions): void;
                                                ^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:968
  Property `headers` is incompatible:
    924:     headers?: HeadersInit;
                       ^^^^^^^^^^^ undefined. This type is incompatible with. See lib: <BUILTINS>/bom.js:924
    975:     headers: Headers;
                      ^^^^^^^ Headers. See lib: <BUILTINS>/bom.js:975

Error: request.js:6
  6: const e: Request = new Request(b, c); // incorrect
                                       ^ Request. This type is incompatible with the expected param type of
968:     constructor(input: RequestInfo, init?: RequestOptions): void;
                                                ^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:968
  Property `integrity` is incompatible:
    925:     integrity?: string;
                         ^^^^^^ undefined. This type is incompatible with. See lib: <BUILTINS>/bom.js:925
    976:     integrity: string;
                        ^^^^^^ string. See lib: <BUILTINS>/bom.js:976

Error: request.js:6
  6: const e: Request = new Request(b, c); // incorrect
                                       ^ Request. This type is incompatible with the expected param type of
968:     constructor(input: RequestInfo, init?: RequestOptions): void;
                                                ^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:968
  Property `method` is incompatible:
    927:     method?: string;
                      ^^^^^^ undefined. This type is incompatible with. See lib: <BUILTINS>/bom.js:927
    977:     method: string;
                     ^^^^^^ string. See lib: <BUILTINS>/bom.js:977

Error: request.js:6
  6: const e: Request = new Request(b, c); // incorrect
                                       ^ Request. This type is incompatible with the expected param type of
968:     constructor(input: RequestInfo, init?: RequestOptions): void;
                                                ^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:968
  Property `mode` is incompatible:
    928:     mode?: ModeType;
                    ^^^^^^^^ undefined. This type is incompatible with. See lib: <BUILTINS>/bom.js:928
    978:     mode: ModeType;
                   ^^^^^^^^ string enum. See lib: <BUILTINS>/bom.js:978

Error: request.js:6
  6: const e: Request = new Request(b, c); // incorrect
                                       ^ Request. This type is incompatible with the expected param type of
968:     constructor(input: RequestInfo, init?: RequestOptions): void;
                                                ^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:968
  Property `redirect` is incompatible:
    929:     redirect?: RedirectType;
                        ^^^^^^^^^^^^ undefined. This type is incompatible with. See lib: <BUILTINS>/bom.js:929
    979:     redirect: RedirectType;
                       ^^^^^^^^^^^^ string enum. See lib: <BUILTINS>/bom.js:979

Error: request.js:6
  6: const e: Request = new Request(b, c); // incorrect
                                       ^ Request. This type is incompatible with the expected param type of
968:     constructor(input: RequestInfo, init?: RequestOptions): void;
                                                ^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:968
  Property `referrerPolicy` is incompatible:
    931:     referrerPolicy?: ReferrerPolicyType;
                              ^^^^^^^^^^^^^^^^^^ undefined. This type is incompatible with. See lib: <BUILTINS>/bom.js:931
    981:     referrerPolicy: ReferrerPolicyType;
                             ^^^^^^^^^^^^^^^^^^ string enum. See lib: <BUILTINS>/bom.js:981

Error: request.js:6
  6: const e: Request = new Request(b, c); // incorrect
                                       ^ Request. This type is incompatible with the expected param type of
968:     constructor(input: RequestInfo, init?: RequestOptions): void;
                                                ^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:968
  Property `referrer` is incompatible:
    930:     referrer?: string;
                        ^^^^^^ undefined. This type is incompatible with. See lib: <BUILTINS>/bom.js:930
    980:     referrer: string;
                       ^^^^^^ string. See lib: <BUILTINS>/bom.js:980

Error: request.js:8
  8: const f: Request = new Request({}) // incorrect
                                    ^^ object literal. This type is incompatible with the expected param type of
968:     constructor(input: RequestInfo, init?: RequestOptions): void;
                            ^^^^^^^^^^^ union: Request | URL | string. See lib: <BUILTINS>/bom.js:968
  Member 1:
  917: type RequestInfo = Request | URL | string;
                          ^^^^^^^ Request. See lib: <BUILTINS>/bom.js:917
  Error:
    8: const f: Request = new Request({}) // incorrect
                                      ^^ object literal. This type is incompatible with
  917: type RequestInfo = Request | URL | string;
                          ^^^^^^^ Request. See lib: <BUILTINS>/bom.js:917
  Member 2:
  917: type RequestInfo = Request | URL | string;
                                    ^^^ URL. See lib: <BUILTINS>/bom.js:917
  Error:
    8: const f: Request = new Request({}) // incorrect
                                      ^^ object literal. This type is incompatible with
  917: type RequestInfo = Request | URL | string;
                                    ^^^ URL. See lib: <BUILTINS>/bom.js:917
  Member 3:
  917: type RequestInfo = Request | URL | string;
                                          ^^^^^^ string. See lib: <BUILTINS>/bom.js:917
  Error:
    8: const f: Request = new Request({}) // incorrect
                                      ^^ object literal. This type is incompatible with
  917: type RequestInfo = Request | URL | string;
                                          ^^^^^^ string. See lib: <BUILTINS>/bom.js:917

Error: request.js:24
 24: h.text().then((t: Buffer) => t); // incorrect
                   ^^^^^^^^^^^^^^^^ function. This type is incompatible with the expected param type of
598:       onFulfill?: (value: R) => Promise<U> | U,
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:598
  This parameter is incompatible:
    990:     text(): Promise<string>;
                             ^^^^^^ string. This type is incompatible with. See lib: <BUILTINS>/bom.js:990
     24: h.text().then((t: Buffer) => t); // incorrect
                           ^^^^^^ Buffer

Error: request.js:26
 26: h.arrayBuffer().then((ab: Buffer) => ab); // incorrect
                          ^^^^^^^^^^^^^^^^^^ function. This type is incompatible with the expected param type of
598:       onFulfill?: (value: R) => Promise<U> | U,
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:598
  This parameter is incompatible:
     26: h.arrayBuffer().then((ab: Buffer) => ab); // incorrect
                                   ^^^^^^ Buffer. This type is incompatible with
    986:     arrayBuffer(): Promise<ArrayBuffer>;
                                    ^^^^^^^^^^^ ArrayBuffer. See lib: <BUILTINS>/bom.js:986

Error: request.js:54
                                                          v
 54: const l: Request = new Request('http://example.org', {
 55:   method: 'GET',
 56:   headers: 'Content-Type: image/jpeg',
...:
 59: }) // incorrect - headers is string
     ^ object literal. This type is incompatible with the expected param type of
968:     constructor(input: RequestInfo, init?: RequestOptions): void;
                                                ^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:968
  Property `headers` is incompatible:
     56:   headers: 'Content-Type: image/jpeg',
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
    924:     headers?: HeadersInit;
                       ^^^^^^^^^^^ union: Headers | object type. See lib: <BUILTINS>/bom.js:924
      Member 1:
      870: type HeadersInit = Headers | {[key: string]: string};
                              ^^^^^^^ Headers. See lib: <BUILTINS>/bom.js:870
      Error:
       56:   headers: 'Content-Type: image/jpeg',
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
      870: type HeadersInit = Headers | {[key: string]: string};
                              ^^^^^^^ Headers. See lib: <BUILTINS>/bom.js:870
      Member 2:
      870: type HeadersInit = Headers | {[key: string]: string};
                                        ^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:870
      Error:
       56:   headers: 'Content-Type: image/jpeg',
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
      870: type HeadersInit = Headers | {[key: string]: string};
                                        ^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:870

Error: request.js:63
 63: new Request('/', { method: null }); // incorrect
                      ^^^^^^^^^^^^^^^^ object literal. This type is incompatible with the expected param type of
968:     constructor(input: RequestInfo, init?: RequestOptions): void;
                                                ^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:968
  Property `method` is incompatible:
     63: new Request('/', { method: null }); // incorrect
                                    ^^^^ null. This type is incompatible with
    927:     method?: string;
                      ^^^^^^ string. See lib: <BUILTINS>/bom.js:927

Error: response.js:8
  8: new Response("", { status: "404" }); // incorrect
                      ^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with the expected param type of
942:     constructor(input?: ?BodyInit, init?: ResponseOptions): void;
                                               ^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:942
  Property `status` is incompatible:
      8: new Response("", { status: "404" }); // incorrect
                                    ^^^^^ string. This type is incompatible with
    936:     status?: number;
                      ^^^^^^ number. See lib: <BUILTINS>/bom.js:936

Error: response.js:9
  9: new Response("", { status: null }); // incorrect
                      ^^^^^^^^^^^^^^^^ object literal. This type is incompatible with the expected param type of
942:     constructor(input?: ?BodyInit, init?: ResponseOptions): void;
                                               ^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:942
  Property `status` is incompatible:
      9: new Response("", { status: null }); // incorrect
                                    ^^^^ null. This type is incompatible with
    936:     status?: number;
                      ^^^^^^ number. See lib: <BUILTINS>/bom.js:936

Error: response.js:11
                                                      v
 11: const f: Response = new Response("responsebody", {
 12:     status: 404,
 13:     headers: "'Content-Type': 'image/jpeg'"
 14: }); // incorrect
     ^ object literal. This type is incompatible with the expected param type of
942:     constructor(input?: ?BodyInit, init?: ResponseOptions): void;
                                               ^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:942
  Property `headers` is incompatible:
     13:     headers: "'Content-Type': 'image/jpeg'"
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
    938:     headers?: HeadersInit
                       ^^^^^^^^^^^ union: Headers | object type. See lib: <BUILTINS>/bom.js:938
      Member 1:
      870: type HeadersInit = Headers | {[key: string]: string};
                              ^^^^^^^ Headers. See lib: <BUILTINS>/bom.js:870
      Error:
       13:     headers: "'Content-Type': 'image/jpeg'"
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
      870: type HeadersInit = Headers | {[key: string]: string};
                              ^^^^^^^ Headers. See lib: <BUILTINS>/bom.js:870
      Member 2:
      870: type HeadersInit = Headers | {[key: string]: string};
                                        ^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:870
      Error:
       13:     headers: "'Content-Type': 'image/jpeg'"
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
      870: type HeadersInit = Headers | {[key: string]: string};
                                        ^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:870

Error: response.js:30
                                      v
 30: const i: Response = new Response({
 31:     status: 404,
 32:     headers: new Headers({
...:
 35: }); // incorrect
     ^ object literal. This type is incompatible with the expected param type of
942:     constructor(input?: ?BodyInit, init?: ResponseOptions): void;
                              ^^^^^^^^ union: string | URLSearchParams | FormData | Blob | ArrayBuffer | $ArrayBufferView. See lib: <BUILTINS>/bom.js:942
  Member 1:
  915: type BodyInit = string | URLSearchParams | FormData | Blob | ArrayBuffer | $ArrayBufferView;
                       ^^^^^^ string. See lib: <BUILTINS>/bom.js:915
  Error:
                                        v
   30: const i: Response = new Response({
   31:     status: 404,
   32:     headers: new Headers({
  ...:
   35: }); // incorrect
       ^ object literal. This type is incompatible with
  915: type BodyInit = string | URLSearchParams | FormData | Blob | ArrayBuffer | $ArrayBufferView;
                       ^^^^^^ string. See lib: <BUILTINS>/bom.js:915
  Member 2:
  915: type BodyInit = string | URLSearchParams | FormData | Blob | ArrayBuffer | $ArrayBufferView;
                                ^^^^^^^^^^^^^^^ URLSearchParams. See lib: <BUILTINS>/bom.js:915
  Error:
                                        v
   30: const i: Response = new Response({
   31:     status: 404,
   32:     headers: new Headers({
  ...:
   35: }); // incorrect
       ^ object literal. This type is incompatible with
  915: type BodyInit = string | URLSearchParams | FormData | Blob | ArrayBuffer | $ArrayBufferView;
                                ^^^^^^^^^^^^^^^ URLSearchParams. See lib: <BUILTINS>/bom.js:915
  Member 3:
  915: type BodyInit = string | URLSearchParams | FormData | Blob | ArrayBuffer | $ArrayBufferView;
                                                  ^^^^^^^^ FormData. See lib: <BUILTINS>/bom.js:915
  Error:
                                        v
   30: const i: Response = new Response({
   31:     status: 404,
   32:     headers: new Headers({
  ...:
   35: }); // incorrect
       ^ object literal. This type is incompatible with
  915: type BodyInit = string | URLSearchParams | FormData | Blob | ArrayBuffer | $ArrayBufferView;
                                                  ^^^^^^^^ FormData. See lib: <BUILTINS>/bom.js:915
  Member 4:
  915: type BodyInit = string | URLSearchParams | FormData | Blob | ArrayBuffer | $ArrayBufferView;
                                                             ^^^^ Blob. See lib: <BUILTINS>/bom.js:915
  Error:
                                        v
   30: const i: Response = new Response({
   31:     status: 404,
   32:     headers: new Headers({
  ...:
   35: }); // incorrect
       ^ object literal. This type is incompatible with
  915: type BodyInit = string | URLSearchParams | FormData | Blob | ArrayBuffer | $ArrayBufferView;
                                                             ^^^^ Blob. See lib: <BUILTINS>/bom.js:915
  Member 5:
  915: type BodyInit = string | URLSearchParams | FormData | Blob | ArrayBuffer | $ArrayBufferView;
                                                                    ^^^^^^^^^^^ ArrayBuffer. See lib: <BUILTINS>/bom.js:915
  Error:
                                        v
   30: const i: Response = new Response({
   31:     status: 404,
   32:     headers: new Headers({
  ...:
   35: }); // incorrect
       ^ object literal. This type is incompatible with
  915: type BodyInit = string | URLSearchParams | FormData | Blob | ArrayBuffer | $ArrayBufferView;
                                                                    ^^^^^^^^^^^ ArrayBuffer. See lib: <BUILTINS>/bom.js:915
  Member 6:
  915: type BodyInit = string | URLSearchParams | FormData | Blob | ArrayBuffer | $ArrayBufferView;
                                                                                  ^^^^^^^^^^^^^^^^ $ArrayBufferView. See lib: <BUILTINS>/bom.js:915
  Error:
                                        v
   30: const i: Response = new Response({
   31:     status: 404,
   32:     headers: new Headers({
  ...:
   35: }); // incorrect
       ^ object literal. This type is incompatible with
  915: type BodyInit = string | URLSearchParams | FormData | Blob | ArrayBuffer | $ArrayBufferView;
                                                                                  ^^^^^^^^^^^^^^^^ union: $TypedArray | DataView. See lib: <BUILTINS>/bom.js:915
    Member 1:
    628: type $ArrayBufferView = $TypedArray | DataView;
                                 ^^^^^^^^^^^ $TypedArray. See lib: <BUILTINS>/core.js:628
    Error:
                                          v
     30: const i: Response = new Response({
     31:     status: 404,
     32:     headers: new Headers({
    ...:
     35: }); // incorrect
         ^ object literal. This type is incompatible with
    628: type $ArrayBufferView = $TypedArray | DataView;
                                 ^^^^^^^^^^^ $TypedArray. See lib: <BUILTINS>/core.js:628
    Member 2:
    628: type $ArrayBufferView = $TypedArray | DataView;
                                               ^^^^^^^^ DataView. See lib: <BUILTINS>/core.js:628
    Error:
                                          v
     30: const i: Response = new Response({
     31:     status: 404,
     32:     headers: new Headers({
    ...:
     35: }); // incorrect
         ^ object literal. This type is incompatible with
    628: type $ArrayBufferView = $TypedArray | DataView;
                                               ^^^^^^^^ DataView. See lib: <BUILTINS>/core.js:628

Error: response.js:42
 42: h.text().then((t: Buffer) => t); // incorrect
                   ^^^^^^^^^^^^^^^^ function. This type is incompatible with the expected param type of
598:       onFulfill?: (value: R) => Promise<U> | U,
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:598
  This parameter is incompatible:
    964:     text(): Promise<string>;
                             ^^^^^^ string. This type is incompatible with. See lib: <BUILTINS>/bom.js:964
     42: h.text().then((t: Buffer) => t); // incorrect
                           ^^^^^^ Buffer

Error: response.js:44
 44: h.arrayBuffer().then((ab: Buffer) => ab); // incorrect
                          ^^^^^^^^^^^^^^^^^^ function. This type is incompatible with the expected param type of
598:       onFulfill?: (value: R) => Promise<U> | U,
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:598
  This parameter is incompatible:
     44: h.arrayBuffer().then((ab: Buffer) => ab); // incorrect
                                   ^^^^^^ Buffer. This type is incompatible with
    960:     arrayBuffer(): Promise<ArrayBuffer>;
                                    ^^^^^^^^^^^ ArrayBuffer. See lib: <BUILTINS>/bom.js:960

Error: urlsearchparams.js:4
  4: const b = new URLSearchParams(['key1', 'value1']); // not correct
                                   ^^^^^^^^^^^^^^^^^^ array literal. This type is incompatible with the expected param type of
891:     constructor(query?: string | URLSearchParams): void;
                             ^^^^^^^^^^^^^^^^^^^^^^^^ union: string | URLSearchParams. See lib: <BUILTINS>/bom.js:891
  Member 1:
  891:     constructor(query?: string | URLSearchParams): void;
                               ^^^^^^ string. See lib: <BUILTINS>/bom.js:891
  Error:
    4: const b = new URLSearchParams(['key1', 'value1']); // not correct
                                     ^^^^^^^^^^^^^^^^^^ array literal. This type is incompatible with
  891:     constructor(query?: string | URLSearchParams): void;
                               ^^^^^^ string. See lib: <BUILTINS>/bom.js:891
  Member 2:
  891:     constructor(query?: string | URLSearchParams): void;
                                        ^^^^^^^^^^^^^^^ URLSearchParams. See lib: <BUILTINS>/bom.js:891
  Error:
    4: const b = new URLSearchParams(['key1', 'value1']); // not correct
                                     ^^^^^^^^^^^^^^^^^^ array literal. This type is incompatible with
  891:     constructor(query?: string | URLSearchParams): void;
                                        ^^^^^^^^^^^^^^^ URLSearchParams. See lib: <BUILTINS>/bom.js:891

Error: urlsearchparams.js:5
  5: const c = new URLSearchParams({'key1': 'value1'}); // not correct
                                   ^^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with the expected param type of
891:     constructor(query?: string | URLSearchParams): void;
                             ^^^^^^^^^^^^^^^^^^^^^^^^ union: string | URLSearchParams. See lib: <BUILTINS>/bom.js:891
  Member 1:
  891:     constructor(query?: string | URLSearchParams): void;
                               ^^^^^^ string. See lib: <BUILTINS>/bom.js:891
  Error:
    5: const c = new URLSearchParams({'key1': 'value1'}); // not correct
                                     ^^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with
  891:     constructor(query?: string | URLSearchParams): void;
                               ^^^^^^ string. See lib: <BUILTINS>/bom.js:891
  Member 2:
  891:     constructor(query?: string | URLSearchParams): void;
                                        ^^^^^^^^^^^^^^^ URLSearchParams. See lib: <BUILTINS>/bom.js:891
  Error:
    5: const c = new URLSearchParams({'key1': 'value1'}); // not correct
                                     ^^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with
  891:     constructor(query?: string | URLSearchParams): void;
                                        ^^^^^^^^^^^^^^^ URLSearchParams. See lib: <BUILTINS>/bom.js:891

Error: urlsearchparams.js:9
  9: e.append('key1'); // not correct
     ^^^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
892:     append(name: string, value: string): void;
                                     ^^^^^^ string. See lib: <BUILTINS>/bom.js:892

Error: urlsearchparams.js:10
 10: e.append({'key1': 'value1'}); // not correct
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
892:     append(name: string, value: string): void;
                                     ^^^^^^ string. See lib: <BUILTINS>/bom.js:892

Error: urlsearchparams.js:10
 10: e.append({'key1': 'value1'}); // not correct
              ^^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with the expected param type of
892:     append(name: string, value: string): void;
                      ^^^^^^ string. See lib: <BUILTINS>/bom.js:892

Error: urlsearchparams.js:12
 12: e.set('key1'); // not correct
     ^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
900:     set(name: string, value: string): void;
                                  ^^^^^^ string. See lib: <BUILTINS>/bom.js:900

Error: urlsearchparams.js:13
 13: e.set({'key1': 'value1'}); // not correct
     ^^^^^^^^^^^^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
900:     set(name: string, value: string): void;
                                  ^^^^^^ string. See lib: <BUILTINS>/bom.js:900

Error: urlsearchparams.js:13
 13: e.set({'key1': 'value1'}); // not correct
           ^^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with the expected param type of
900:     set(name: string, value: string): void;
                   ^^^^^^ string. See lib: <BUILTINS>/bom.js:900

Error: urlsearchparams.js:15
 15: const f: URLSearchParams = e.append('key1', 'value1'); // not correct
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^ undefined. This type is incompatible with
 15: const f: URLSearchParams = e.append('key1', 'value1'); // not correct
              ^^^^^^^^^^^^^^^ URLSearchParams

Error: urlsearchparams.js:18
 18: const h: number = e.get('key1'); // not correct
                       ^^^^^^^^^^^^^ string. This type is incompatible with
 18: const h: number = e.get('key1'); // not correct
              ^^^^^^ number


Found 45 errors
